--- a/color.css
+++ b/color.css
@@ -1,8 +1,14 @@
-div{
-    color: blue;
-    background-color: aqua;
-}
-p{
-    font-size: 50px;
-    background-color: brown;
+
+#form{
+    background-color: rgb(63, 63, 155);
+    color: chartreuse;
+    border: 2px solid black;
+    text-align: center;
+    height:400px;
+    justify-content: center;
+     border-radius: 15px;
+   margin: 20px 20px;
+   padding-top: 40px;
+   display: flexbox;
+
 }
